<resources>
    <string name="app_name">HomeWork_015</string>
    <string name="x">x</string>
    <string name="c">C</string>
    <string name="sign">eng</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="total">=</string>
    <string name="text" />
    <string name="ms">ms</string>
    <string name="mr">mr</string>
    <string name="m_plus">m+</string>
    <string name="m_minus">m-</string>
    <string name="changeSign">+/-</string>
    <string name="tan">tan</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="log">log</string>
    <string name="rand">ran</string>
    <string name="deg">deg</string>
    <string name="_2x">2x</string>
    <string name="arrow">e</string>
</resources>
